# knife-lang

./: .gitattributes  .gitignore  CMakeLists.txt  Ideas.txt  README.md  Subst.g4  hello.json  main.cpp
antlr4-runtime/: CMakeLists.txt
basekit/: CMakeLists.txt  DataTypes.cpp  DataTypes.hpp  Environment.cpp  Environment.hpp
cmake/: UseBoost.cmake
compiler/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  Json.cpp  Json.hpp  KnifeLexer.g4  KnifeParser.g4  KnifeParserContext.cpp  KnifeParserContextImpl.cpp  KnifeParserContextImpl.hpp  Outputter.cpp  OutputterImpl.cpp  ParseListener.cpp  ParseListener.hpp  Planning for source generation.txt  Transform.cpp  Transform.hpp  knife-exports.cpp  knife-exports.hpp  main.cpp
compiler/data/: LogDatabase.cpp  LogDatabase.hpp  NullLogger.hpp  ParseLogger.hpp
compiler/lang/: Expression.cpp  Expression.hpp  Program.cpp  Program.hpp  Relation.cpp  Relation.hpp  Statement.cpp  Statement.hpp  expression_builder.hpp
compiler/outp/: Output.cpp  Output.hpp  ProgramNamespace.cpp  ProgramNamespace.hpp  RelationClass.hpp  StepCase.hpp
data/: t.expr
docs/: Test.md
skeleton/: main.cpp.txt  program.cpp  program.hpp  skeleton_main.cpp
sqlite3/: CMakeLists.txt
templates/: ExprProg.stg  SqlScripts.stg  generate_header.stg  generate_source.stg  hello.stg  test_data.json
tests/: CMakeLists.txt  CompilationTests.cpp  EnvironmentTests.cpp  ParsingTests.cpp  TestMain.cpp  TranslationTests.cpp  UnitTests.cpp  Utility.hpp
transpiler/: CMakeLists.txt  CompilerImpl.cpp  CompilerImpl.hpp  Expr.g4  ExprLexer.g4  ExprParser.g4  Json.hpp  KnifeLexer.g4  KnifeParser.g4  KnifeParserContext.hpp  KnifeParserContextImpl.cpp  KnifeParserContextImpl.hpp  Output.cpp  Output.hpp  Outputter.hpp  OutputterImpl.cpp  OutputterImpl.hpp  ParseListener.cpp  ParseListener.hpp  Program.hpp  Relation.cpp  Relation.hpp  Transform.cpp  Transform.hpp  knife-exports.cpp  knife-exports.hpp  main.cpp
transpiler/data/: LogDatabase.cpp  LogDatabase.hpp  NullLogger.cpp  ParseLogger.cpp  ParseLogger.hpp
transpiler/lang/: Expression.cpp  Expression.hpp  Relation.cpp  Relation.hpp  Statement.hpp
transpiler/outp/: Output.cpp  Output.hpp  RelationClass.cpp  RelationClass.hpp  StepCase.cpp  StepCase.hpp
user_prog/: CMakeLists.txt  Environment.hpp  ExampleRelation.cpp  ExampleRelation.hpp  ExampleRelation2.cpp  ExampleRelation2.hpp  README.md  t.expr  user_lib.cpp  user_lib.hpp  user_main.cpp
user_prog/examples/: ancestor.knf  family_con.kf
