

set(antlr4_files
        ./antlr4-common.h
        ./antlr4-runtime.h
        ./ANTLRErrorListener.cpp
        ./ANTLRErrorListener.h
        ./ANTLRErrorStrategy.cpp
        ./ANTLRErrorStrategy.h
        ./ANTLRFileStream.cpp
        ./ANTLRFileStream.h
        ./ANTLRInputStream.cpp
        ./ANTLRInputStream.h
        ./atn/AbstractPredicateTransition.cpp
        ./atn/AbstractPredicateTransition.h
        ./atn/ActionTransition.cpp
        ./atn/ActionTransition.h
        ./atn/AmbiguityInfo.cpp
        ./atn/AmbiguityInfo.h
        ./atn/ArrayPredictionContext.cpp
        ./atn/ArrayPredictionContext.h
        ./atn/ATN.cpp
        ./atn/ATN.h
        ./atn/ATNConfig.cpp
        ./atn/ATNConfig.h
        ./atn/ATNConfigSet.cpp
        ./atn/ATNConfigSet.h
        ./atn/ATNDeserializationOptions.cpp
        ./atn/ATNDeserializationOptions.h
        ./atn/ATNDeserializer.cpp
        ./atn/ATNDeserializer.h
        ./atn/ATNSerializer.cpp
        ./atn/ATNSerializer.h
        ./atn/ATNSimulator.cpp
        ./atn/ATNSimulator.h
        ./atn/ATNState.cpp
        ./atn/ATNState.h
        ./atn/ATNType.h
        ./atn/AtomTransition.cpp
        ./atn/AtomTransition.h
        ./atn/BasicBlockStartState.cpp
        ./atn/BasicBlockStartState.h
        ./atn/BasicState.cpp
        ./atn/BasicState.h
        ./atn/BlockEndState.cpp
        ./atn/BlockEndState.h
        ./atn/BlockStartState.cpp
        ./atn/BlockStartState.h
        ./atn/ContextSensitivityInfo.cpp
        ./atn/ContextSensitivityInfo.h
        ./atn/DecisionEventInfo.cpp
        ./atn/DecisionEventInfo.h
        ./atn/DecisionInfo.cpp
        ./atn/DecisionInfo.h
        ./atn/DecisionState.cpp
        ./atn/DecisionState.h
        ./atn/EmptyPredictionContext.cpp
        ./atn/EmptyPredictionContext.h
        ./atn/EpsilonTransition.cpp
        ./atn/EpsilonTransition.h
        ./atn/ErrorInfo.cpp
        ./atn/ErrorInfo.h
        ./atn/LexerAction.cpp
        ./atn/LexerAction.h
        ./atn/LexerActionExecutor.cpp
        ./atn/LexerActionExecutor.h
        ./atn/LexerActionType.h
        ./atn/LexerATNConfig.cpp
        ./atn/LexerATNConfig.h
        ./atn/LexerATNSimulator.cpp
        ./atn/LexerATNSimulator.h
        ./atn/LexerChannelAction.cpp
        ./atn/LexerChannelAction.h
        ./atn/LexerCustomAction.cpp
        ./atn/LexerCustomAction.h
        ./atn/LexerIndexedCustomAction.cpp
        ./atn/LexerIndexedCustomAction.h
        ./atn/LexerModeAction.cpp
        ./atn/LexerModeAction.h
        ./atn/LexerMoreAction.cpp
        ./atn/LexerMoreAction.h
        ./atn/LexerPopModeAction.cpp
        ./atn/LexerPopModeAction.h
        ./atn/LexerPushModeAction.cpp
        ./atn/LexerPushModeAction.h
        ./atn/LexerSkipAction.cpp
        ./atn/LexerSkipAction.h
        ./atn/LexerTypeAction.cpp
        ./atn/LexerTypeAction.h
        ./atn/LL1Analyzer.cpp
        ./atn/LL1Analyzer.h
        ./atn/LookaheadEventInfo.cpp
        ./atn/LookaheadEventInfo.h
        ./atn/LoopEndState.cpp
        ./atn/LoopEndState.h
        ./atn/Makefile
        ./atn/NotSetTransition.cpp
        ./atn/NotSetTransition.h
        ./atn/OrderedATNConfigSet.cpp
        ./atn/OrderedATNConfigSet.h
        ./atn/ParseInfo.cpp
        ./atn/ParseInfo.h
        ./atn/ParserATNSimulator.cpp
        ./atn/ParserATNSimulator.h
        ./atn/PlusBlockStartState.cpp
        ./atn/PlusBlockStartState.h
        ./atn/PlusLoopbackState.cpp
        ./atn/PlusLoopbackState.h
        ./atn/PrecedencePredicateTransition.cpp
        ./atn/PrecedencePredicateTransition.h
        ./atn/PredicateEvalInfo.cpp
        ./atn/PredicateEvalInfo.h
        ./atn/PredicateTransition.cpp
        ./atn/PredicateTransition.h
        ./atn/PredictionContext.cpp
        ./atn/PredictionContext.h
        ./atn/PredictionMode.cpp
        ./atn/PredictionMode.h
        ./atn/ProfilingATNSimulator.cpp
        ./atn/ProfilingATNSimulator.h
        ./atn/RangeTransition.cpp
        ./atn/RangeTransition.h
        ./atn/RuleStartState.cpp
        ./atn/RuleStartState.h
        ./atn/RuleStopState.cpp
        ./atn/RuleStopState.h
        ./atn/RuleTransition.cpp
        ./atn/RuleTransition.h
        ./atn/SemanticContext.cpp
        ./atn/SemanticContext.h
        ./atn/SetTransition.cpp
        ./atn/SetTransition.h
        ./atn/SingletonPredictionContext.cpp
        ./atn/SingletonPredictionContext.h
        ./atn/StarBlockStartState.cpp
        ./atn/StarBlockStartState.h
        ./atn/StarLoopbackState.cpp
        ./atn/StarLoopbackState.h
        ./atn/StarLoopEntryState.cpp
        ./atn/StarLoopEntryState.h
        ./atn/TokensStartState.cpp
        ./atn/TokensStartState.h
        ./atn/Transition.cpp
        ./atn/Transition.h
        ./atn/WildcardTransition.cpp
        ./atn/WildcardTransition.h
        ./BailErrorStrategy.cpp
        ./BailErrorStrategy.h
        ./BaseErrorListener.cpp
        ./BaseErrorListener.h
        ./BufferedTokenStream.cpp
        ./BufferedTokenStream.h
        ./CharStream.cpp
        ./CharStream.h
        ./CMakeLists.txt
        ./CommonToken.cpp
        ./CommonToken.h
        ./CommonTokenFactory.cpp
        ./CommonTokenFactory.h
        ./CommonTokenStream.cpp
        ./CommonTokenStream.h
        ./ConsoleErrorListener.cpp
        ./ConsoleErrorListener.h
        ./DefaultErrorStrategy.cpp
        ./DefaultErrorStrategy.h
        ./dfa/DFA.cpp
        ./dfa/DFA.h
        ./dfa/DFASerializer.cpp
        ./dfa/DFASerializer.h
        ./dfa/DFAState.cpp
        ./dfa/DFAState.h
        ./dfa/LexerDFASerializer.cpp
        ./dfa/LexerDFASerializer.h
        ./DiagnosticErrorListener.cpp
        ./DiagnosticErrorListener.h
        ./Exceptions.cpp
        ./Exceptions.h
        ./FailedPredicateException.cpp
        ./FailedPredicateException.h
        ./InputMismatchException.cpp
        ./InputMismatchException.h
        ./InterpreterRuleContext.cpp
        ./InterpreterRuleContext.h
        ./IntStream.cpp
        ./IntStream.h
        ./Lexer.cpp
        ./Lexer.h
        ./LexerInterpreter.cpp
        ./LexerInterpreter.h
        ./LexerNoViableAltException.cpp
        ./LexerNoViableAltException.h
        ./LICENSE.txt
        ./ListTokenSource.cpp
        ./ListTokenSource.h
        ./misc/InterpreterDataReader.cpp
        ./misc/InterpreterDataReader.h
        ./misc/Interval.cpp
        ./misc/Interval.h
        ./misc/IntervalSet.cpp
        ./misc/IntervalSet.h
        ./misc/MurmurHash.cpp
        ./misc/MurmurHash.h
        ./misc/Predicate.cpp
        ./misc/Predicate.h
        ./NoViableAltException.cpp
        ./NoViableAltException.h
        ./Parser.cpp
        ./Parser.h
        ./ParserInterpreter.cpp
        ./ParserInterpreter.h
        ./ParserRuleContext.cpp
        ./ParserRuleContext.h
        ./ProxyErrorListener.cpp
        ./ProxyErrorListener.h
        ./RecognitionException.cpp
        ./RecognitionException.h
        ./Recognizer.cpp
        ./Recognizer.h
        ./RuleContext.cpp
        ./RuleContext.h
        ./RuleContextWithAltNum.cpp
        ./RuleContextWithAltNum.h
        ./RuntimeMetaData.cpp
        ./RuntimeMetaData.h
        ./support/Any.cpp
        ./support/Any.h
        ./support/Arrays.cpp
        ./support/Arrays.h
        ./support/BitSet.h
        ./support/CPPUtils.cpp
        ./support/CPPUtils.h
        ./support/Declarations.h
        ./support/guid.cpp
        ./support/guid.h
        ./support/StringUtils.cpp
        ./support/StringUtils.h
        ./Token.cpp
        ./Token.h
        ./TokenFactory.h
        ./TokenSource.cpp
        ./TokenSource.h
        ./TokenStream.cpp
        ./TokenStream.h
        ./TokenStreamRewriter.cpp
        ./TokenStreamRewriter.h
        ./tree/AbstractParseTreeVisitor.h
        ./tree/ErrorNode.cpp
        ./tree/ErrorNode.h
        ./tree/ErrorNodeImpl.cpp
        ./tree/ErrorNodeImpl.h
        ./tree/IterativeParseTreeWalker.cpp
        ./tree/IterativeParseTreeWalker.h
        ./tree/ParseTree.cpp
        ./tree/ParseTree.h
        ./tree/ParseTreeListener.cpp
        ./tree/ParseTreeListener.h
        ./tree/ParseTreeProperty.h
        ./tree/ParseTreeVisitor.cpp
        ./tree/ParseTreeVisitor.h
        ./tree/ParseTreeWalker.cpp
        ./tree/ParseTreeWalker.h
        ./tree/pattern/Chunk.cpp
        ./tree/pattern/Chunk.h
        ./tree/pattern/ParseTreeMatch.cpp
        ./tree/pattern/ParseTreeMatch.h
        ./tree/pattern/ParseTreePattern.cpp
        ./tree/pattern/ParseTreePattern.h
        ./tree/pattern/ParseTreePatternMatcher.cpp
        ./tree/pattern/ParseTreePatternMatcher.h
        ./tree/pattern/RuleTagToken.cpp
        ./tree/pattern/RuleTagToken.h
        ./tree/pattern/TagChunk.cpp
        ./tree/pattern/TagChunk.h
        ./tree/pattern/TextChunk.cpp
        ./tree/pattern/TextChunk.h
        ./tree/pattern/TokenTagToken.cpp
        ./tree/pattern/TokenTagToken.h
        ./tree/TerminalNode.cpp
        ./tree/TerminalNode.h
        ./tree/TerminalNodeImpl.cpp
        ./tree/TerminalNodeImpl.h
        ./tree/Trees.cpp
        ./tree/Trees.h
        ./tree/xpath/XPath.cpp
        ./tree/xpath/XPath.h
        ./tree/xpath/XPathElement.cpp
        ./tree/xpath/XPathElement.h
        ./tree/xpath/XPathLexer.cpp
        ./tree/xpath/XPathLexer.g4
        ./tree/xpath/XPathLexer.h
        ./tree/xpath/XPathLexer.tokens
        ./tree/xpath/XPathLexerErrorListener.cpp
        ./tree/xpath/XPathLexerErrorListener.h
        ./tree/xpath/XPathRuleAnywhereElement.cpp
        ./tree/xpath/XPathRuleAnywhereElement.h
        ./tree/xpath/XPathRuleElement.cpp
        ./tree/xpath/XPathRuleElement.h
        ./tree/xpath/XPathTokenAnywhereElement.cpp
        ./tree/xpath/XPathTokenAnywhereElement.h
        ./tree/xpath/XPathTokenElement.cpp
        ./tree/xpath/XPathTokenElement.h
        ./tree/xpath/XPathWildcardAnywhereElement.cpp
        ./tree/xpath/XPathWildcardAnywhereElement.h
        ./tree/xpath/XPathWildcardElement.cpp
        ./tree/xpath/XPathWildcardElement.h
        ./UnbufferedCharStream.cpp
        ./UnbufferedCharStream.h
        ./UnbufferedTokenStream.cpp
        ./UnbufferedTokenStream.h
        ./Vocabulary.cpp
        ./Vocabulary.h
        ./WritableToken.cpp
        ./WritableToken.h
        )

set(antlr4_include_dirs
        ./
        ./atn
        ./dfa
        ./misc
        ./support
        ./tree
        ./tree/pattern
        ./tree/xpath
        ../utf8cpp
        ../utf8cpp/utf8
)

add_library(antlr4_static STATIC ${antlr4_files})
#add_library(antlr4_shared SHARED ${antlr4_files})
target_include_directories(antlr4_static PUBLIC ${antlr4_include_dirs})
#target_include_directories(antlr4_shared PUBLIC ${antlr4_include_dirs})

set(extra_static_compile_flags "-DUSE_UTF8_INSTEAD_OF_CODECVT -DANTLR4CPP_STATIC")
#set(extra_share_compile_flags "-DUSE_UTF8_INSTEAD_OF_CODECVT")

set_target_properties(antlr4_static PROPERTIES COMPILE_FLAGS ${extra_static_compile_flags})
#set_target_properties(antlr4_shared PROPERTIES COMPILE_FLAGS ${extra_share_compile_flags})

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
  target_link_libraries(antlr4_static ${UUID_LIBRARIES})
#  target_link_libraries(antlr4_shared ${UUID_LIBRARIES})
elseif(APPLE)
  target_link_libraries(antlr4_static ${COREFOUNDATION_LIBRARY})
#  target_link_libraries(antlr4_shared ${COREFOUNDATION_LIBRARY})
endif()
